--- a/unifex-test-nucleof207zg.ioc
+++ b/unifex-test-nucleof207zg.ioc
@@ -1,15 +1,19 @@
 #MicroXplorer Configuration settings - do not modify
+ETH.IPParameters=MediaInterface,RxMode
+ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
+ETH.RxMode=ETH_RXINTERRUPT_MODE
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F207ZGT6
 Mcu.Family=STM32F2
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=USART3
-Mcu.IP4=USB_DEVICE
-Mcu.IP5=USB_OTG_FS
-Mcu.IPNb=6
+Mcu.IP0=ETH
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=USART3
+Mcu.IP5=USB_DEVICE
+Mcu.IP6=USB_OTG_FS
+Mcu.IPNb=7
 Mcu.Name=STM32F207Z(C-E-F-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -51,6 +55,7 @@ MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
+NVIC.ETH_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
@@ -64,6 +69,7 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
 PA1.Locked=true
+PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=USB_ID
@@ -92,10 +98,12 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
 PA2.Locked=true
+PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 PA7.Locked=true
+PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=USB_SOF [TP1]
@@ -114,6 +122,7 @@ PB0.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
+PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
@@ -130,6 +139,7 @@ PB7.Signal=GPIO_Output
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
+PC1.Mode=RMII
 PC1.Signal=ETH_MDC
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
@@ -144,10 +154,12 @@ PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
 PC4.Locked=true
+PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
 PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
+PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
@@ -162,10 +174,12 @@ PD9.Signal=USART3_RX
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
+PG11.Mode=RMII
 PG11.Signal=ETH_TX_EN
 PG13.GPIOParameters=GPIO_Label
 PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 PG13.Locked=true
+PG13.Mode=RMII
 PG13.Signal=ETH_TXD0
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
@@ -206,12 +220,12 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=unifex-test-nucleof207zg.ioc
 ProjectManager.ProjectName=unifex-test-nucleof207zg
-ProjectManager.RegisterCallBack=
+ProjectManager.RegisterCallBack=ETH
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,5-MX_ETH_Init-ETH-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
